<resources>
    <string name="app_name">Widget KitaBisa</string>
    <string name="kantong_donasi">Kantong donasi :</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="riwayat_donasi">Riwayat Donasi</string>
    <string name="donasi_otomatis">Donasi Otomatis</string>

    <string name="judul1">Bantu Ibu X untuk operasi</string>
    <string name="judul2">Kebakaran rusun</string>
    <string name="judul3">Bantu korban bencana banjir</string>

    <string name="subJudul1">Ibu X berpenyakit paru-paru</string>
    <string name="subJudul2">Kebakaran rusun di daerah Y</string>
    <string name="subJudul3">Banjir melanda pada provinsi Z</string>

    <string name="deskripsi1">Urgent! Untuk biaya operasi segera agar tidak bertambah..</string>
    <string name="deskripsi2">Mengakibatkan kerugian senilai 100 juta dan menelan korban..</string>
    <string name="deskripsi3">Lebih dari 700 rumah terdampak bencana ini, 2890 orang terkena..</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="dummy_cash">2000</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="none">-</string>
    <string name="waktu_sholat_selanjutnya">Waktu sholat selanjutnya</string>
    <string name="izinkan_lokasi">Izinkan Lokasi</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="magrib">Magrib</string>
    <string name="isya">Isya</string>
    <string name="kantong_donasimu">Kantong Donasimu</string>
    <string name="saldo">Rp. 2000</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="isi">Isi</string>
</resources>