<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiwayatActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="#DDDDDD">
        <TextView
            android:id="@+id/judul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul1"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/subJudul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subJudul1"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/deskripsi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="#DDDDDD">
        <TextView
            android:id="@+id/judul2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul2"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/subJudul2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subJudul2"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/deskripsi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="#DDDDDD">
        <TextView
            android:id="@+id/judu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul3"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/subJudul3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subJudul3"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/deskripsi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi3"/>
    </LinearLayout>
</LinearLayout>